# brems_sim_B4c

./: .gitignore  CMakeLists.txt  README.md  julians_spectra.py  main.cc  plot_all_materials.py  plot_spectrum.py
binned_data/: binned_W.csv
include/: CalorHit.hh  CalorimeterSD.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh
macros/: run1og.mac
plots/: julians_spectra.py  plot.py
recovered_data/: outputdata1.txt
scripts/: julians_spectra.py  plot_spectrum.py.save
src/: ActionInitialization.cc  CalorHit.cc  CalorimeterSD.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
